# rpc-monit

./: CMakeLists.txt  client.cpp  server.cpp
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  dataGen.hpp  dataGenMonit.hpp  server.cpp  stackData.hpp
